@@ -771,7 +771,17 @@ def decode_wind(pkt, pkt_data):
         # average wind.  weewx requires kph, so the result needs to be 
         # converted.
         if gust_speed < avg_speed:
-            record['windGust'] = avg_speed * 3.60
+            record['windGust'] = None
+            record['windGustDir'] = None
+        else:
+            # use the regular wind direction for the gust direction
+            record['windGustDir'] = record['windDir']
+
+        # Wind direction is undefined if wind speed is zero:
+        if record['windSpeed'] == 0:
+            record['windDir'] = None
+        if record['windGust'] == 0:
+            record['windGustDir'] = None
 
         if DEBUG_PACKETS_WIND:
             logdbg('  Wind Dir: %s' % (WIND_DIR_MAP[pkt_data[0] & 0x0f]))
