@@ -13,6 +13,10 @@ to be read as a large positive number.
 
 Fixed bug in wmr100 driver that causes gust wind direction to be zero.
 
+Fixed bug in wmr200 driver that causes gust wind direction to be zero.
+
+Fixed ultimeter driver to ensure wind direction is None when no wind speed.
+
 
 3.0.1 12/07/14
 
